clusters/homelab/infrastructure/adguard-home/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard-home
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
