clusters/homelab/infrastructure/adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-dns
  namespace: adguard-home
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.0.0.71"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: adguard-home
  ports:
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-home-web
  namespace: adguard-home
spec:
  type: ClusterIP
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
    - name: setup
      port: 3000
      targetPort: 3000
      protocol: TCP
