clusters/homelab/infrastructure/adguard-home/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-home
  namespace: adguard-home
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/authz/auth-request
    nginx.ingress.kubernetes.io/auth-signin: https://auth.tkuipers.ca/?rd=https://$host$escaped_request_uri
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adguard.tkuipers.ca
      secretName: adguard-tkuipers-ca-tls
  rules:
    - host: adguard.tkuipers.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adguard-home-web
                port:
                  number: 80
